Se agregó endpoint para recuperar listado de permisos
